--- a/roboshop.conf
+++ b/roboshop.conf
@@ -4,11 +4,11 @@ location /images/ {
   root   /usr/share/nginx/html;
   try_files $uri /images/placeholder.jpg;
 }
-location /api/catalogue/ { proxy_pass http://catalogue.learndevcloud.online:8080/; }
-location /api/user/ { proxy_pass http://user.learndevcloud.online:8080/; }
-location /api/cart/ { proxy_pass http://cart.learndevcloud.online:8080/; }
-location /api/shipping/ { proxy_pass http://shipping.learndevcloud.online:8080/; }
-location /api/payment/ { proxy_pass http://payment.learndevcloud.online:8080/; }
+location /api/catalogue/ { proxy_pass http://catalogue.app.learndevcloud.online/; }
+location /api/user/ { proxy_pass http://user.app.learndevcloud.online/; }
+location /api/cart/ { proxy_pass http://cart.app.learndevcloud.online/; }
+location /api/shipping/ { proxy_pass http://shipping.app.learndevcloud.online/; }
+location /api/payment/ { proxy_pass http://payment.app.learndevcloud.online/; }
 
 location /health {
   stub_status on;
